fix: executable jar output